creating repositorys - creating DTO